--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,6 @@ bin/*/
 /.idea/
 /resources/
 /logs/
-/musichall/musichall.iml
-/musichall/target
+/labaTeam/musichall.iml
+/labaTeam/target
 /target/
